tests/baselines/reference/optionalBindingParameters2.errors.txt
optionalBindingParameters2.ts(1,14): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
optionalBindingParameters2.ts(7,7): error TS2322: Type 'boolean' is not assignable to type 'string'.
optionalBindingParameters2.ts(7,23): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== optionalBindingParameters2.ts (3 errors) ====
    function foo({ x, y, z }?: { x: string; y: number; z: boolean }) {
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
    
    }
    
    foo({ x: "", y: 0, z: false });
    
    foo({ x: false, y: 0, z: "" });
          ~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
                          ~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.